administration/templates/management-ui/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: management-ui
  namespace: management-ui
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: management-ui.glasswall-icap.com
    http:
      paths:
        - path: /
          backend:
            serviceName: icap-management-ui-service
            servicePort: 8080
